third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/leading-zero-plus.stderr
TOML parse error at line 1, column 23
  |
1 | leading-zero-plus = +03.14
  |                       ^
expected newline, `#`
